:factory: $ make goa_gen
