# apisvr/services/gen/grpc/channels/server/encode_decode.go
@@ -12,10 +12,8 @@ import (
 	channelsviews "apisvr/services/gen/channels/views"
 	channelspb "apisvr/services/gen/grpc/channels/pb"
 	"context"
-	"strings"
 
 	goagrpc "goa.design/goa/v3/grpc"
-	goa "goa.design/goa/v3/pkg"
 	"google.golang.org/grpc/metadata"
 )
 
@@ -36,27 +34,17 @@ func EncodeListResponse(ctx context.Context, v any, hdr, trlr *metadata.MD) (any
 // endpoint.
 func DecodeListRequest(ctx context.Context, v any, md metadata.MD) (any, error) {
 	var (
-		sessionID string
-		err       error
+		message *channelspb.ListRequest
+		ok      bool
 	)
 	{
-		if vals := md.Get("authorization"); len(vals) == 0 {
-			err = goa.MergeErrors(err, goa.MissingFieldError("authorization", "metadata"))
-		} else {
-			sessionID = vals[0]
+		if message, ok = v.(*channelspb.ListRequest); !ok {
+			return nil, goagrpc.ErrInvalidType("channels", "list", "*channelspb.ListRequest", v)
 		}
-	}
-	if err != nil {
-		return nil, err
 	}
 	var payload *channels.ListPayload
 	{
-		payload = NewListPayload(sessionID)
-		if strings.Contains(payload.SessionID, " ") {
-			// Remove authorization scheme prefix (e.g. "Bearer")
-			cred := strings.SplitN(payload.SessionID, " ", 2)[1]
-			payload.SessionID = cred
-		}
+		payload = NewListPayload(message)
 	}
 	return payload, nil
 }
@@ -78,20 +66,6 @@ func EncodeShowResponse(ctx context.Context, v any, hdr, trlr *metadata.MD) (any
 // endpoint.
 func DecodeShowRequest(ctx context.Context, v any, md metadata.MD) (any, error) {
 	var (
-		sessionID string
-		err       error
-	)
-	{
-		if vals := md.Get("authorization"); len(vals) == 0 {
-			err = goa.MergeErrors(err, goa.MissingFieldError("authorization", "metadata"))
-		} else {
-			sessionID = vals[0]
-		}
-	}
-	if err != nil {
-		return nil, err
-	}
-	var (
 		message *channelspb.ShowRequest
 		ok      bool
 	)
@@ -102,12 +76,7 @@ func DecodeShowRequest(ctx context.Context, v any, md metadata.MD) (any, error) 
 	}
 	var payload *channels.ShowPayload
 	{
-		payload = NewShowPayload(message, sessionID)
-		if strings.Contains(payload.SessionID, " ") {
-			// Remove authorization scheme prefix (e.g. "Bearer")
-			cred := strings.SplitN(payload.SessionID, " ", 2)[1]
-			payload.SessionID = cred
-		}
+		payload = NewShowPayload(message)
 	}
 	return payload, nil
 }
@@ -129,20 +98,6 @@ func EncodeCreateResponse(ctx context.Context, v any, hdr, trlr *metadata.MD) (a
 // endpoint.
 func DecodeCreateRequest(ctx context.Context, v any, md metadata.MD) (any, error) {
 	var (
-		sessionID string
-		err       error
-	)
-	{
-		if vals := md.Get("authorization"); len(vals) == 0 {
-			err = goa.MergeErrors(err, goa.MissingFieldError("authorization", "metadata"))
-		} else {
-			sessionID = vals[0]
-		}
-	}
-	if err != nil {
-		return nil, err
-	}
-	var (
 		message *channelspb.CreateRequest
 		ok      bool
 	)
@@ -153,12 +108,7 @@ func DecodeCreateRequest(ctx context.Context, v any, md metadata.MD) (any, error
 	}
 	var payload *channels.ChannelCreatePayload
 	{
-		payload = NewCreatePayload(message, sessionID)
-		if strings.Contains(payload.SessionID, " ") {
-			// Remove authorization scheme prefix (e.g. "Bearer")
-			cred := strings.SplitN(payload.SessionID, " ", 2)[1]
-			payload.SessionID = cred
-		}
+		payload = NewCreatePayload(message)
 	}
 	return payload, nil
 }
@@ -180,20 +130,6 @@ func EncodeUpdateResponse(ctx context.Context, v any, hdr, trlr *metadata.MD) (a
 // endpoint.
 func DecodeUpdateRequest(ctx context.Context, v any, md metadata.MD) (any, error) {
 	var (
-		sessionID string
-		err       error
-	)
-	{
-		if vals := md.Get("authorization"); len(vals) == 0 {
-			err = goa.MergeErrors(err, goa.MissingFieldError("authorization", "metadata"))
-		} else {
-			sessionID = vals[0]
-		}
-	}
-	if err != nil {
-		return nil, err
-	}
-	var (
 		message *channelspb.UpdateRequest
 		ok      bool
 	)
@@ -204,12 +140,7 @@ func DecodeUpdateRequest(ctx context.Context, v any, md metadata.MD) (any, error
 	}
 	var payload *channels.ChannelUpdatePayload
 	{
-		payload = NewUpdatePayload(message, sessionID)
-		if strings.Contains(payload.SessionID, " ") {
-			// Remove authorization scheme prefix (e.g. "Bearer")
-			cred := strings.SplitN(payload.SessionID, " ", 2)[1]
-			payload.SessionID = cred
-		}
+		payload = NewUpdatePayload(message)
 	}
 	return payload, nil
 }
@@ -231,20 +162,6 @@ func EncodeDeleteResponse(ctx context.Context, v any, hdr, trlr *metadata.MD) (a
 // endpoint.
 func DecodeDeleteRequest(ctx context.Context, v any, md metadata.MD) (any, error) {
 	var (
-		sessionID string
-		err       error
-	)
-	{
-		if vals := md.Get("authorization"); len(vals) == 0 {
-			err = goa.MergeErrors(err, goa.MissingFieldError("authorization", "metadata"))
-		} else {
-			sessionID = vals[0]
-		}
-	}
-	if err != nil {
-		return nil, err
-	}
-	var (
 		message *channelspb.DeleteRequest
 		ok      bool
 	)
@@ -255,12 +172,7 @@ func DecodeDeleteRequest(ctx context.Context, v any, md metadata.MD) (any, error
 	}
 	var payload *channels.DeletePayload
 	{
-		payload = NewDeletePayload(message, sessionID)
-		if strings.Contains(payload.SessionID, " ") {
-			// Remove authorization scheme prefix (e.g. "Bearer")
-			cred := strings.SplitN(payload.SessionID, " ", 2)[1]
-			payload.SessionID = cred
-		}
+		payload = NewDeletePayload(message)
 	}
 	return payload, nil
 }
